--- a/src/app/address/address.component.html
+++ b/src/app/address/address.component.html
@@ -1,1 +1,4 @@
-<p>address works!</p>
+<h3>Name: {{name}}</h3>
+<h5>Surname: {{surname}}</h5>
+<h3>Phone: {{phone}}</h3>
+<button (click)="deleteRecord(name,surname,phone)">Delete</button>
